Fix ul padding
The tag ul has a default padding-left of 40. We remove this as it
is extra space that we do not want.

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ ul {
     list-style-type: none;
     display: flex;
     gap: 16px;
+    padding: 0;
 }
 
 /* Container */ 
